2017-11-10  Wenson Hsieh  <wenson_hsieh@apple.com>

        Finish rolling out r224544

        Rubber-stamped by Tim Horton.

        Now that https://bugs.webkit.org/show_bug.cgi?id=179431 has been fixed, we can once again allow one of the API
        tests added in r224512 (WKAttachmentTests.AttachmentUpdatesWhenChangingFontStyles) to test toggling underline
        style with a selected attachment element.

        * TestWebKitAPI/Tests/WebKitCocoa/WKAttachmentTests.mm:
        (TestWebKitAPI::TEST):

2017-11-10  Alex Christensen  <achristensen@webkit.org>

        _WKThumbnailView initialization with WKWebView needs to call correct initWithFrame
        https://bugs.webkit.org/show_bug.cgi?id=179537
        <rdar://problem/35275219>

        Reviewed by Darin Adler.

        * TestWebKitAPI/Tests/WebKit/WKThumbnailView.mm:
        (-[WKThumbnailViewDelegate webView:didFinishNavigation:]):
        (TestWebKitAPI::TEST):

2017-11-10  Jonathan Bedard  <jbedard@apple.com>

        webkitpy: Remove find_system_pid from port classes
        https://bugs.webkit.org/show_bug.cgi?id=179514
        <rdar://problem/35456900>

        Reviewed by David Kilzer.

        Removing dead code.

        * Scripts/webkitpy/port/base.py:
        (Port.find_system_pid): Deleted.
        * Scripts/webkitpy/port/server_process.py:
        (ServerProcess._start):
        * Scripts/webkitpy/port/win.py:
        (WinPort.find_system_pid): Deleted.

2017-11-10  Aakash Jain  <aakash_jain@apple.com>

        fix style failures in webkitpy: multiple statements on one line (semicolon)
        https://bugs.webkit.org/show_bug.cgi?id=179530

        Reviewed by Alex Christensen.

        * Scripts/webkitpy/common/net/buildbot/buildbot.py: Removed semicolon.
        * Scripts/webkitpy/layout_tests/controllers/test_result_writer.py: Ditto.
        * Scripts/webkitpy/tool/steps/runtests.py: Ditto.

2017-11-10  Aakash Jain  <aakash_jain@apple.com>
